--- a/style.css
+++ b/style.css
@@ -84,10 +84,10 @@ body {
     margin-top: 50px;
 }
 
-/* .illus4,
-.illus5 {
-    margin-top: 50px;
-} */
+.col-md-3 {
+    /* border: 1px solid red; */
+    text-align: center;
+}
 
 .illus7 {
     height: 300px;
@@ -98,7 +98,8 @@ body {
     height: 250px;
     width: 250px;
     margin-top: 50px !important;
-    margin-left: 25%;
+    /* margin: auto !important; */
+    /* border: 1px solid red; */
 }
 
 .lower-text p {
