--- a/style.css
+++ b/style.css
@@ -80,8 +80,8 @@ body {
     width: 0;
     margin: auto;
     background-color: black;
-    padding-top: 300px;
-    margin-top: 50px;
+    padding: 100px 0px;
+    margin-top: 80px;
 }
 
 .col-md-3 {
