--- a/style.css
+++ b/style.css
@@ -11,12 +11,14 @@ body {
 nav {
     width: 100%;
     background: white;
-    /* z-index: 999; */
+    z-index: 999;
     position: fixed;
+    /* border: 1px solid red; */
+    display: block;
 }
 
 .navBar.scrolled {
-    z-index: 1000;
+    z-index: 999;
     background-color: #fff !important;
     transition: background-color 200ms linear;
     -webkit-box-shadow: 0 8px 6px -6px rgb(180, 180, 180);
@@ -61,6 +63,7 @@ ul li a:hover {
     color: #fff;
     font-size: 30px;
     display: none;
+    /* z-index: 1000; */
 }
 
 .toggle i {
@@ -80,6 +83,7 @@ ul li a:hover {
     ul {
         width: 100%;
         display: block;
+        z-index: 999;
     }
 
     ul li {
@@ -95,8 +99,9 @@ ul li a:hover {
 .illus1 {
     height: 125px;
     width: 125px;
-    margin-top: -30px;
+    margin-top: 50px;
     margin-left: -30px;
+    /* overflow: hidden; */
 }
 
 .upr-text {
@@ -115,10 +120,18 @@ ul li a:hover {
     text-align: justify;
 }
 
+.upr-left {
+    /* z-index: 999; */
+}
+
+.upr-right {
+    /* z-index: 999; */
+}
+
 .illus2 {
     height: 600px;
     width: 900px;
-    margin-top: -50px;
+    /* margin-top: -50px; */
 }
 
 .illus3 {
