--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
   padding: 0;
   overflow-x: hidden;
   box-sizing: border-box;
+  font-family: "Oxygen", sans-serif;
 }
 
 nav {
@@ -108,15 +109,15 @@ ul li a:hover {
 
 .upr-text h1 {
   margin-top: 80px;
-  font-family: "Arimo", sans-serif;
+  /* font-family: "Arimo", sans-serif; */
   font-weight: bolder;
 }
 
 .upr-text p {
   font-size: 19px;
   line-height: 30px;
-  letter-spacing: -0.1px;
-  font-family: "Oxygen", sans-serif;
+  /* letter-spacing: -0.1px; */
+  /* font-family: "Arimo", sans-serif; */
   /* text-align: justify; */
 }
 
@@ -134,8 +135,8 @@ ul li a:hover {
 .mid-text {
   font-size: 19px;
   line-height: 30px;
-  letter-spacing: -0.1px;
-  font-family: "Oxygen", sans-serif;
+  /* letter-spacing: -0.1px; */
+  /* font-family: "Oxygen", sans-serif; */
   max-width: 50%;
   /* line-height: 30px; */
   margin: auto;
@@ -181,8 +182,7 @@ ul li a:hover {
   margin-top: 30px;
   font-size: 19px;
   line-height: 30px;
-  letter-spacing: -0.1px;
-  font-family: "Oxygen", sans-serif;
+  /* letter-spacing: -0.1px; */
 }
 
 .illus8 {
